# parkmail-cxxprog

./: .gitignore  README.md
.github/workflows/: hw01.yml  hw02.yml
homework01/: CMakeLists.txt  main.c
homework01/cmd/: main.c
homework01/orienteering/inc/: exitcodes.h  io.h  rating.h  teamresult.h
homework01/orienteering/src/: io.c  rating.c  team.c  teamresult.c
homework01/samples/: sample01.txt
homework01/tests/: CMakeLists.txt  main.cc
homework02/: CMakeLists.txt
homework02/examples/: CMakeLists.txt
homework02/examples/top5files/: CMakeLists.txt  main.c
homework02/include/matches/: exitcodes.h  returncodes.h  scan_dir.h
homework02/lib/: CMakeLists.txt
homework02/lib/collections/: CMakeLists.txt
homework02/lib/collections/include/collections/: exitcodes.h  returncodes.h  string.h  utils.h  vector.h
homework02/lib/collections/src/: CMakeLists.txt  string.c
homework02/lib/collections/tests/: CMakeLists.txt
homework02/lib/collections/tests/unittests/: CMakeLists.txt  main.cc  string.h  vector.h
homework02/src/: CMakeLists.txt  count_token.h  count_token_file.h  counttoken.h  counttoken_file.h  util.h
homework02/src/parallel/: CMakeLists.txt  scan_dir.c  scan_dir_helper.h
homework02/src/serial/: CMakeLists.txt  scan_dir.c
homework02/tests/: CMakeLists.txt
homework02/tests/stresstest/: CMakeLists.txt  main.c
homework02/tests/stresstest/script/: gendata.py  run_stresstest.sh
homework02/tests/unittests/: CMakeLists.txt  main.cc  scan_dir.h
hw01/: CMakeLists.txt  main.c
hw01/orienteering/: CMakeLists.txt
hw01/orienteering/inc/: rating.h  teamresult.h
hw01/orienteering/src/: rating.c  teamresult.c
hw01/tests/: CMakeLists.txt  main.cc
